Fixes bottom-bar spacing

--- a/src/components/bars/Bar.css
+++ b/src/components/bars/Bar.css
@@ -1,7 +1,6 @@
 
 .Bar {
   background-color: var(--color-background-card);
-  box-shadow: var(--box-shadow-main);
   width: 100%;
   z-index: 1;
 }
